rel 
* chroust: do not change ref_ids when the chroust is re-executed 
* Adding more colors for data seriaes in chart on team-rank screen

rel 0.1.4
* metadata.ini: In case value for [solution].id is not set, the value 
  from [solution].next_cgrp_id prefixed with 'KEY-' is used
* Introducing replacements of <file-[type][number]> tag in text files
* chroust accept new --verbose switch
* chroust: adding colored output
* chroust: check that graph of clues/solutions is continuous

rel 0.1.3
* fixing bug in calculating team ranks
* limit for display countdowns is configurable in global ini file
* new type of clues - marked with question mark
* check doubled request when spending coin
* display solutions on HQ screen 

rel 0.1.2
* HQ: Reworked the overview table

rel 0.1.1
* HQ: display team rank order

rel 0.1.0
* Set timezone in config file
* Adding ability to gain coins and buy hints
* metadata.ini: attribute solution.final renamed to cgrp.final
* metadata.ini: Unit (h, m or s) could be specified for timeouts
* Introducing hidden clues
* Ability to send email notification when a team find solution
* Adding new view showing all clues and hints on single screen

 
rel 0.0.10