@@ -7,7 +7,7 @@ Team
  
 HQ
 --
-- zobrazovat tabulku aktualniho poradi, eventuelne ji aktualizovat klikanim do grafu
+- tabulku aktualniho poradi aktualizovat klikanim do grafu
 - auto refresh logu udalosti
 - v logu udalosti udelat klikaci odkazy na HINT, SOLUTION, ...
 - log udalosti -> filtr - tymy radit abecedne 
